--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link href="https://www.haskell.org/img/favicon.ico" rel="icon">
-<link rel="stylesheet" type="text/css" href="./demangle.css">
+  <link href="https://www.haskell.org/img/favicon.ico" rel="icon">
+  <link rel="stylesheet" type="text/css" href="./demangle.css">
+  <title>GHC demangler</title>
 </head>
 <body>
 
