write some readme copy, trim default input whitespace

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@ This can be useful if you're inspecting haskell object files, etc.
 
 <div class="demangle-ghc io-tool">
   <div class="tool-input-container">
-    <textarea id="ghc-input" class="tool-input">
-      multizmexceptzm2zi0zi0zminplace_ControlziApplicativeziMultiExcept_zdtczqSuccess3_bytes
-    </textarea>
+    <textarea id="ghc-input" class="tool-input">multizmexceptzm2zi0zi0zminplace_ControlziApplicativeziMultiExcept_zdtczqSuccess3_bytes</textarea>
   </div>
   <div class="tool-output-container">
     <pre id="ghc-output" class="tool-output">
