feat: Add kitchen sink test

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@ This can be useful if you're inspecting haskell object files, etc.
 
 Examples: <select id="demangle-ghc-examples">
   <option value="multizmexceptzm2zi0zi0zminplace_ControlziApplicativeziMultiExcept_zdtczqSuccess3_bytes">multi-except</option>
-  <option value="ghczmprim_GHCziTypes_ZMZN_closure">(,)</option>
-  <option value="base_GHCziBase_ZCzb_con_info">:|</option>
+  <option value="ghczmprim_GHCziTypes_ZMZN_closure">[ listy ]</option>
+  <option value="base_GHCziBase_ZCzb_con_info">non :| empty</option>
   <option value="ghczmprim_GHCziTupleziPrim_Z10T_con_info">Big ( tuple )</option>
   <option value="ghczmprim_GHCziTupleziPrim_Z10H_con_info">Big (# tuple #)</option>
+  <option value="abcdefghijklmnopqrstuvwxyzz\nABCDEFGHIJKLMNOPQRSTUVWXYZZ\nz03bbU\nza zb zc zd ze zg zh zi zl zm zn zp zq zr zs zt zu zv\nZL ZR ZM ZN ZC\nZ0T Z3T\nZ1H Z3H">Kitchen sink</option>
 </select>
 
 <p>
